--- a/index.html
+++ b/index.html
@@ -1,83 +1,183 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css"
-</head>
-<body>   
+  </head>
+  <body>
     <header class="section">
-    <nav>  
-    <a class="style-studio-name" lang="en" href="link"><span class="studio-name">Web</span><span class="studio-name-header" >Studio</span></a>
-<ul>
-    <li><a class="studio header-list" href="link">Студия</a></li>
-    <li><a class="portfolio header-list" href="./portfolio.html">Портфолио</a></li>
-    <li><a class="portfolio header-list" href="link">Контакты</a></li> 
-</ul>
-    </nav>
-    <ul>
-    <li><a class="studio header-list" href="link">info@devstudio</a></li> 
-    <li><a class="header-phone header-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
-</ul>
+      <nav>
+        <a class="style-studio-name" lang="en" href="link"
+          ><span class="studio-name">Web</span
+          ><span class="studio-name-header">Studio</span></a
+        >
+        <ul>
+          <li><a class="studio header-list" href="link">Студия</a></li>
+          <li>
+            <a class="portfolio header-list" href="./portfolio.html"
+              >Портфолио</a
+            >
+          </li>
+          <li><a class="portfolio header-list" href="link">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a class="studio header-list" href="link">info@devstudio</a></li>
+        <li>
+          <a class="header-phone header-list" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
+      </ul>
     </header>
 
-<main>
-    <section class="about-us">
-    <h1 class="big-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА </h1> 
-    <button class="button" type="button">Заказать услугу
-    </section>    
-    <section>
+    <main>
+      <section class="about-us">
+        <h1 class="big-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+        <button class="button" type="button">Заказать услугу</button>
+      </section>
+      <section>
         <ul>
-            <li><h3 class="title-description">ВНИМАНИЕ К ДЕТАЛЯМ</h3><p class="article-about-us-description">Идейные соображения, а также начало повседневной работы по формированию позиции</p></li>
-            <li><h3 class="title-description">ПУНКТУАЛЬНОСТЬ</h3> <p class="article-about-us-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
-            <li><h3 class="title-description">ПЛАНИРОВАНИЕ</h3> <p class="article-about-us-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
-            <li><h3 class="title-description">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3><p class="article-about-us-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p></li>
+          <li>
+            <h3 class="title-description">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+            <p class="article-about-us-description">
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции
+            </p>
+          </li>
+          <li>
+            <h3 class="title-description">ПУНКТУАЛЬНОСТЬ</h3>
+            <p class="article-about-us-description">
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3 class="title-description">ПЛАНИРОВАНИЕ</h3>
+            <p class="article-about-us-description">
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3 class="title-description">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+            <p class="article-about-us-description">
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
         </ul>
-    </section>
-        <section>
+      </section>
+      <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-        <img class="image-1" src="./img/img2.jpg" width= "370"; height= "294" alt="программист работает на планшете">
-        <img class="image-1" src="./img/secondimg.jpg" width= "370" height="294" alt="дизайнеры разрабатывают новый дизайн приложения">
-        <img class="image-1" src="./img/img.jpg" width= "370"; height= "294"
-        alt="креативный дизайнер работает на графическом планшете">
+          <img
+            class="image-1"
+            src="./img/img2.jpg"
+            width="370"
+            ;
+            height="294"
+            alt="программист работает на планшете"
+          />
+          <img
+            class="image-1"
+            src="./img/secondimg.jpg"
+            width="370"
+            height="294"
+            alt="дизайнеры разрабатывают новый дизайн приложения"
+          />
+          <img
+            class="image-1"
+            src="./img/img.jpg"
+            width="370"
+            ;
+            height="294"
+            alt="креативный дизайнер работает на графическом планшете"
+          />
         </ul>
-        </section>
+      </section>
 
-    <section class="our-team-photos">
-<h2>Наша команда</h2>
-<ul>
-<li class="photo"><img class="our-team" src="./img/img3.jpg" width= 270; height= 260; alt="our-product-designer">
-<h3 class="our-team-profesionals">Игорь Демьяненко</h3> 
-<p class="our-team-profesionals-position">Product Designer</p></li>
-<li class="photo"><img class="our-team" src="./img/img4.jpg" width= 270; height= 260; alt="our-frontend-developer">
-<h3 class="our-team-profesionals">Ольга Репина</h3> 
-<p class="our-team-profesionals-position">Frontend Developer</p></li>
-<li class="photo"><img class="our-team" src="./img/img5.jpg" width= 270; height= 260; alt="our-marketing-specialist">
-<h3 class="our-team-profesionals">Николай Тарасов</h3> 
-<p class="our-team-profesionals-position">Marketing</p></li>
-<li class="photo"><img class="our-team" src="./img/img6.jpg"width= 270; height= 260; alt="our-ui-designer">
-<h3 class="our-team-profesionals">Михаил Ермаков</h3>
-<p class="our-team-profesionals-position">UI Designer</p></li>
-</ul>
-    </section>
+      <section class="our-team-photos">
+        <h2>Наша команда</h2>
+        <ul>
+          <li class="photo">
+            <img
+              class="our-team"
+              src="./img/img3.jpg"
+              width="270;"
+              height="260;"
+              alt="our-product-designer"
+            />
+            <h3 class="our-team-profesionals">Игорь Демьяненко</h3>
+            <p class="our-team-profesionals-position">Product Designer</p>
+          </li>
+          <li class="photo">
+            <img
+              class="our-team"
+              src="./img/img4.jpg"
+              width="270;"
+              height="260;"
+              alt="our-frontend-developer"
+            />
+            <h3 class="our-team-profesionals">Ольга Репина</h3>
+            <p class="our-team-profesionals-position">Frontend Developer</p>
+          </li>
+          <li class="photo">
+            <img
+              class="our-team"
+              src="./img/img5.jpg"
+              width="270;"
+              height="260;"
+              alt="our-marketing-specialist"
+            />
+            <h3 class="our-team-profesionals">Николай Тарасов</h3>
+            <p class="our-team-profesionals-position">Marketing</p>
+          </li>
+          <li class="photo">
+            <img
+              class="our-team"
+              src="./img/img6.jpg"
+              width="270;"
+              height="260;"
+              alt="our-ui-designer"
+            />
+            <h3 class="our-team-profesionals">Михаил Ермаков</h3>
+            <p class="our-team-profesionals-position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="about-us">
-        <a class="style-studio-name" href="link"><span class="studio-name">Web</span><span class="studio-name-2">Studio</span></a>
-        <ul>
-            <li class="adress footer-contacts">г.Киев,пр-т Леси Украинки,26</li>
-            <li><a class="our-tell footer-contacts" href="mailto:@example.com"> @example.com</a></li>
-            <li class="footer-contacts"><a class="our-tell" href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>
+      <a class="style-studio-name" href="link"
+        ><span class="studio-name">Web</span
+        ><span class="studio-name-2">Studio</span></a
+      >
+      <ul>
+        <li class="adress footer-contacts">г.Киев,пр-т Леси Украинки,26</li>
+        <li>
+          <a class="our-tell footer-contacts" href="mailto:@example.com">
+            @example.com</a
+          >
+        </li>
+        <li class="footer-contacts">
+          <a class="our-tell" href="tel:+380991111111">+38 099 111 11 11</a>
+        </li>
+      </ul>
     </footer>
-
-</body>
+  </body>
 </html>
