--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </ul>
       </section>
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="second-titles">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
@@ -117,7 +117,7 @@
       </section>
 
       <section class="our-team-photos">
-        <h2>Наша команда</h2>
+        <h2 class="second-titles">Наша команда</h2>
         <ul>
           <li class="photo">
             <img
@@ -134,8 +134,8 @@
             <img
               class="our-team"
               src="./img/img4.jpg"
-              width="270;"
-              height="260;"
+              width="270"
+              height="260"
               alt="our-frontend-developer"
             />
             <h3 class="our-team-profesionals">Ольга Репина</h3>
@@ -145,8 +145,8 @@
             <img
               class="our-team"
               src="./img/img5.jpg"
-              width="270;"
-              height="260;"
+              width="270"
+              height="260"
               alt="our-marketing-specialist"
             />
             <h3 class="our-team-profesionals">Николай Тарасов</h3>
